--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 100%;
+    padding: 20px;
+}
+
+h3 {
+    font-size: clamp(16px, 4vw, 28px);
+    line-height: 1.5;
+    word-wrap: break-word;
+}
 
 @font-face {
   font-family: PressStart2P; /* set name */
@@ -55,4 +74,5 @@ body,html{
   font-size: 0.8rem;
   line-height: normal;  
   }
+
 }
